--- a/lib/package.json
+++ b/lib/package.json
@@ -20,14 +20,19 @@
   },
   "homepage": "https://github.com/nss-day-cohort-24/chatty-one-girl-one-pineapple#readme",
   "devDependencies": {
+    "bootstrap": "^4.0.0",
     "browserify": "^15.2.0",
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.2.0",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "jquery": "^3.3.1",
     "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1",
-    "matchdep": "^2.0.0"
-  }
+    "matchdep": "^2.0.0",
+    "popper": "^1.0.1",
+    "xhr": "^2.4.1"
+  },
+  "dependencies": {}
 }
